@@ -813,9 +813,10 @@
         <br />The other scripts should all start with '#!Python' and a '#serialemPrefix' 
         or serialem import line so that the editor 
         behaves correctly, even if they are never run on their own.</li>
-      <li>There is a 'print' function defined, overriding the 'print' in Python 3.&nbsp; 
-        It will take up to 10 arguments, separated by commas, and print them in one line 
-        in the log, separated by spaces.</li>
+      <li>There is a simple 'print' function defined in the python wrapper to the 
+        script, overriding the 'print' in Python 3.&nbsp; It will take up to 10 
+        arguments, separated by commas, and print them in one line in the log, separated 
+        by spaces.</li>
     </ul>
       <p>
         You can of course import any other modules available within the Python 
